--- a/251218-css-basic1/실습.html
+++ b/251218-css-basic1/실습.html
@@ -15,7 +15,7 @@
  메타 태그 이용해 모바일에서도 잘 보이게 뷰포트 설정 -->
 <body>
 
-    <header> <h1>유자(최유진) 프로필</h1> </header>
+    <header> <h1>20251218_자기소개</h1> </header>
 
     <!-- 헤더,h1태그로 자신의 이름, 또는 닉네임 작성 -->
 
@@ -28,10 +28,10 @@
 
     <main>
     <P>안녕하세요. 최유진입니다.<br>
-    코딩과 거리가 멀었던 완전 비전공자입니다<br>
-    4년간 다니던 회사를 그만두고 <br>
+    코딩과 거리가 멀었던 비전공자입니다<br>
+    꽤 오래 일했던 일을 그만두며 <br>
     <strong>새로운 분야로 도전</strong>하고 싶어서 <br>
-    국비지원 풀스택 과정에 참여하게 되었습니다<br>
+    현재 과정에 참여하게 되었습니다<br>
     6개월간 열심히 배워보려고 합니다. 잘 부탁드립니다.
     </P>
     <section>
@@ -50,7 +50,7 @@
     </section>
 
     <section>            
-    <table border="3">
+    <table border="2">
         <caption>경력사항</caption>        
         <thead>
         <tr>
@@ -62,11 +62,11 @@
         <tbody>
         <tr>
         <td>2016.11~2019.5</td>
-        <td>제조회사/SP사업부_영업팀,홍보팀에서 근무</td>
+        <td>제조회사 SP사업부_영업팀, 홍보팀에서 근무</td>
         </tr>
         <tr>
         <td>2021.10~2025.9</td>
-        <td>유통회사/위탁사업부_오프라인팀에서 근무</td>
+        <td>유통회사 위탁사업부_오프라인팀에서 근무</td>
         </tr>
         </tbody>
     </table>
