--- a/deploy/introduce.html
+++ b/deploy/introduce.html
@@ -9,6 +9,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>최유진의 프로필</title>
+
+<style>
+        body {
+            /* 연한 핑크색을 나타내는 HEX 코드 (딸기우유 색에 가까움) */
+            background-color: #f8eef1; 
+            /* 기본 텍스트 색상 설정 (선택 사항) */
+            color: #111111; }
+</style>
+
 </head>
 <!-- 언어는 한국어, 
  브라우저 탭 제목 "ㅇㅇㅇ의 프로필" 으로 설정, 
@@ -27,15 +36,16 @@
     <!-- nav태그를 이용해, 홈/소개/연락처 이동하는 메뉴 링크 만들기 -->
 
     <main>
-    <P>안녕하세요. 최유진입니다.<br>
-    코딩과 거리가 멀었던 비전공자입니다<br>
-    꽤 오래 일했던 일을 그만두며 <br>
-    <strong>새로운 분야로 도전</strong>하고 싶어서 <br>
-    현재 과정에 참여하게 되었습니다<br>
+    <P>안녕하세요, 최유진입니다. <br>
+    코딩과 거리가 멀었던 비전공자입니다.<br>
+    꽤 오래 일했던 일을 그만두면서 <br>
+    새로운 분야를 찾아보다<br>
+    현재 과정에 참여하게 되었습니다.<br>
     6개월간 열심히 배워보려고 합니다. 잘 부탁드립니다.
     </P>
+
     <section>
-    <img src="coding.jpg" width="100%" 
+    <img src="coding1.jpg" width="100%" 
     style="width: 150px; height: 150px; object-fit: contain;" 
     alt="코딩나무"><br>
     </section>
@@ -51,7 +61,7 @@
 
     <section>            
     <table border="2">
-        <caption>경력사항</caption>        
+        <caption>주요 경력</caption>        
         <thead>
         <tr>
         <th>연도</th>
@@ -107,8 +117,8 @@
         </div>
         </form>
     </section>
-
-    <footer>Copyright 2025.12.21</footer>
+    <br>
+    <footer>Copyright 최유진 All right reserved</footer>
     </main>
     
 </body>
