--- a/deploy/introduce.html
+++ b/deploy/introduce.html
@@ -13,7 +13,7 @@
 <style>
         body {
             /* 연한 핑크색을 나타내는 HEX 코드 (딸기우유 색에 가까움) */
-            background-color: #f8eef1; 
+            background-color: #fcfcfc; 
             /* 기본 텍스트 색상 설정 (선택 사항) */
             color: #111111; }
 </style>
