--- a/251219-css-basic2/test-우선순위.html
+++ b/251219-css-basic2/test-우선순위.html
@@ -6,28 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        p {
-            color: gray;
-        }
+        p {color: gray;}
+        /* p태그 1점 */
 
-        /* 1점 */
-        .main-text {
-            color: yellow;
-        }
-
-        /* 10점 */
-        #title {
-            color: blue;
-        }
-
-        /* 100점 */
+        .main-text {color: yellow;}
+        /* 쩜클래스 10점 */
+        
+        #title {color: blue;}
+        /* 아이디샵 100점 */
     </style>
 </head>
 
 <body>
 <p id="title" class="main-text" style="color: green;">
     정답은 무슨 색 일까요?
-    !import -> 인라인 -> 아이디 -> 클래스 -> 태그 -> *
+    <br>★!import -> ★인라인(<p style="color: pink;">) -> 아이디(#) -> 클래스(.) -> 태그(p, div) -> *
+    <br>최강     - 1000점 -   100점 -   10점 -   1점 -   0점
 </p>
 </body>
 
