--- a/251219-css-basic2/test6-Transition-Transform-변환전환.html
+++ b/251219-css-basic2/test6-Transition-Transform-변환전환.html
@@ -16,7 +16,7 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
             /* 변화를 부드럽게 만들기 (필수!) */
-            transition: transform 0.3s, box-shadow 0.3s;
+            transition: transform 0.5s, box-shadow 0.3s;
             /* 같은 효과 
 	        transition: all 0.3s;
 	        transition: 0.3s;
@@ -26,9 +26,9 @@
 
         .card:hover {
             /* 위로 이동하는 효과 */
-            /* transform: translateY(-10px); */
+            transform: translateY(-10px);
             /* 1.2배 확대하는 효과 */
-            transform: scale(1.1);
+            /* transform: scale(1.2); */
             /* 회전하는 효과 */
             /* transform: rotate(45deg); */
             /* 위로 5px 이동 */
