--- a/251218-html-basic4/test.html
+++ b/251218-html-basic4/test.html
@@ -42,15 +42,21 @@
             <h2>포트폴리오</h2> ...
         </section>
         <section>
-            <h2>이미지 크기 예시</h2>
+            <h2>이미지 크기 예시
+                <br>(가로200 세로200)</h2>
             <img src="cat1.jpeg" width="200" height="200" alt="고양이">
         </section>
         <section>
-            <h2>이미지 크기 예시2</h2>
+            <h2>이미지 크기 예시2(가로100%)
+                <br>부모 너비에 맞게 꽉 차게 늘어남.
+            </h2>
             <img src="sun1.jpg" width="100%" alt="거북이">
         </section>
         <section>
-            <h2>이미지 크기 예시3</h2>
+            <h2>이미지 크기 예시3
+                <br>(쩜클 맥스가로100%; 세로오토;)
+                <br>원본보다 커지지는 않되, 부모보다 작아지면
+                <br>자동으로 줄어듦.</h2>
             <style>
                 .responsive-img {
                     max-width: 100%;
@@ -69,82 +75,111 @@
         </section>
          <section>
             <h2>이미지 크기 예시5-object-fit: fill</h2>
-            <p>기본값. 영역에 맞춰 이미지를 늘림 (비율 깨짐)</p>
+            <p>기본값. 영역에 "맞춰" 이미지를 늘림 (비율 깨짐).
+                <br>(채우다보니(fill) 비율이 깨질 수 있음.)
+            </p>
             <img src="dog1.jpg" width="100%" alt="강아지" 
             style="width: 150px; height: 150px; object-fit: fill;">
         </section>
          <section>
             <h2>이미지 크기 예시6-object-fit: contain</h2>
-            <p>이미지 전체가 보이도록 비율을 유지하며 맞춤 (여백 생길 수 있음)</p>
+            <p>이미지 전체가 보이도록(contain) 비율을 유지하며 맞춤 
+                <br>(이미지를 모두 포함시키다보니 여백 생길 수 있음)</p>
             <img src="dog1.jpg" width="100%" alt="강아지" 
             style="width: 150px; height: 150px; object-fit: contain;">
         </section>
         <section>
-            <h2>폼 태그 내부의 input 태그 예시1 -type="password"</h2>
+            <h2>이미지 크기 예시7-object-fit: none</h2>
+            <p>크기 조절 없이 원본 크기 유지
+                <br>이미지가 영역보다 크면 잘리고
+                <br>작으면 원본 크기대로 영역이 맞춰짐.(여백생기지않음)
+            </p>
+            <img src="dog1.jpg" width="100%" alt="강아지" 
+            style="width: 200px; height: 200px; object-fit: none;">
+        </section>
+        <section>
+            <h2>폼 태그 내부의 input 태그 예시1 
+                <br>-type="password"</h2>
             <input type="password" placeholder="비번">
         </section>
         <section>
-            <h2>폼 태그 내부의 input 태그 예시2 -type="text"</h2>
+            <h2>폼 태그 내부의 input 태그 예시2 
+                <br>-type="text"</h2>
             <input type="text" placeholder="이름을 입력하세요">
         </section>
         <section>
-            <h2>폼 태그 내부의 input 태그 예시3 -type="email"</h2>
+            <h2>폼 태그 내부의 input 태그 예시3 
+                <br>-type="email"</h2>
             <input type="email" placeholder="example@email.com">
         </section>
         <section>
-            <h2>폼 태그 내부의 input 태그 예시4 -type="number"</h2>
+            <h2>폼 태그 내부의 input 태그 예시4 
+                <br>-type="number"</h2>
             <input type="number" min="1" max="10" value="1">
         </section>
         <section>
-            <h2>폼 태그 내부의 input 태그 예시5 -type="checkbox"</h2>
+            <h2>폼 태그 내부의 input 태그 예시5 
+                <br>-type="checkbox"</h2>
             <input type="checkbox" id="coding" name="hobby" checked> <label for="coding">코딩</label>
             <input type="checkbox" id="music" name="hobby"> <label for="music">음악 감상</label>
         </section>
         <section>
-            <h2>폼 태그 내부의 input 태그 예시6 -type="radio"</h2>
+            <h2>폼 태그 내부의 input 태그 예시6 
+                <br>-type="radio"</h2>
             <input type="radio" id="male" name="gender" value="m"> <label for="male">남성</label>
             <input type="radio" id="male2" name="gender" value="m"> <label for="male">남성2</label>
             <input type="radio" id="female" name="gender" value="f"> <label for="female">여성</label>
             <input type="radio" id="female2" name="gender" value="f"> <label for="female">여성2</label>
         </section>
         <section>
-            <h2>폼 태그 내부의 input 태그 예시7 -type="file"</h2>
+            <h2>폼 태그 내부의 input 태그 예시7 
+                <br>-type="file"</h2>
             <input type="file">
         </section>
         <section>
-            <h2>폼 태그 내부의 input 태그 예시8 -type="date"</h2>
+            <h2>폼 태그 내부의 input 태그 예시8 
+                <br>-type="date"</h2>
             <input type="date">
         </section>
         <section>
-            <h2>폼 태그 내부의 input 태그 예시9 -type="color"</h2>
+            <h2>폼 태그 내부의 input 태그 예시9 
+                <br>-type="color"</h2>
             <input type="color">
         </section>
         <section>
-            <h2>폼 태그 내부의 input 태그 예시10 -type="range"</h2>
+            <h2>폼 태그 내부의 input 태그 예시10 
+                <br>-type="range"</h2>
             <input type="range" min="0" max="100">
         </section>
         <section>
-            <h2>폼 태그 내부의 input 태그 예시11 -type="submit"</h2>
+            <h2>폼 태그 내부의 input 태그 예시11 
+                <br>-type="submit"</h2>
             <input type="submit" value="가입하기">
         </section>
         <section>
-            <h2>폼 태그 내부의 input 태그 예시12 -type="reset"</h2>
+            <h2>폼 태그 내부의 input 태그 예시12 
+                <br>-type="reset"</h2>
             <input type="reset" value="초기화">
         </section>
         </section>
         <section>
-            <h2>폼 태그 내부의 input 태그 예시13 -type="button"</h2>
+            <h2>폼 태그 내부의 input 태그 예시13 
+                <br>-type="button"</h2>
             <input type="button" value="중복 확인" onclick="alert('확인되었습니다!')">
         </section>
         <section>
-            <h2>폼 태그 내부의 input 태그 예시14 -type="button"</h2>
+            <h2>폼 태그 내부의 input 태그 예시14 
+                <br>-type="textarea"(긴글)</h2>
             <label for="message">문의 내용:</label><br>
-            <textarea id="message" name="message" rows="5" cols="80" placeholder="내용을 입력해 주세요.">
-기본값은 태그 사이에 작성합니다.
-</textarea>
+            <textarea id="message" name="message" 
+            rows="5" cols="80" placeholder="내용을 입력해 주세요."
+            >기본값은 태그 사이에 작성합니다.
+            </textarea> 
         </section>
         <section>
-            <h2>폼 태그 내부의 input 태그 예시15 -type="select"</h2>
+            <h2>폼 태그 내부의 input 태그 예시15 
+            <br>-type="select"(드롭다운)
+            <br>(하나 또는 여러개 선택가능)</h2>
             <label for="cars">좋아하는 차종:</label>
             <select id="cars" name="cars">
                 <option value="none">-- 선택하세요 --</option>
@@ -184,7 +219,8 @@
         </section>
 
         <section>
-            <h2>테이블 태그 예시2, 표가 길어질 경우, 검색 엔진이 구조 파악하기 용이함. 권장방식.!! </h2>
+            <h2>테이블 태그 예시2, 표가 길어질 경우, 
+                <br>검색 엔진이 구조 파악하기 용이함. 권장방식! </h2>
             <table border="1">
                 <thead>
                     <tr>
@@ -228,7 +264,8 @@
                         <td>된장찌개</td>
                     </tr>
                     <tr>
-                        <td colspan="3" style="text-align:center;">※ 주말 식단은 추후 공지</td>
+                        <td colspan="3" style="text-align:center;"
+                        >※ 주말 식단은 추후 공지</td>
                     </tr>
                 </tbody>
             </table>
@@ -251,7 +288,8 @@
         <section>
             <h2>iframe 태그 예시3 유튜브 영상 퍼오기</h2>
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/x-kp5SXBOEU?si=AsAuMlepvPYWmV6G"
+                <iframe width="560" height="315" 
+                src="https://www.youtube.com/embed/x-kp5SXBOEU?si=AsAuMlepvPYWmV6G"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" 
@@ -261,7 +299,8 @@
           <section>
             <h2>iframe 태그 예시3 유튜브 영상 퍼오기2</h2>
             <div>
-               <iframe width="560" height="315" src="https://www.youtube.com/embed/DnHfiIzz8xk?si=K0WQptSd0_zNt9a2" 
+               <iframe width="560" height="315" 
+               src="https://www.youtube.com/embed/DnHfiIzz8xk?si=K0WQptSd0_zNt9a2" 
                title="YouTube video player" frameborder="0" 
                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                referrerpolicy="strict-origin-when-cross-origin" 
@@ -272,7 +311,10 @@
             <h2>iframe 태그 예시4 구글지도 퍼오기</h2>
             <div>
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2306.6265659907654!2d129.05994738550177!3d35.155060182770306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568eb6feb39fa0d%3A0x17502eaffb28a5b4!2z67aA7IKwSVTqtZDsnKHshLzthLA!5e0!3m2!1sko!2skr!4v1766028431458!5m2!1sko!2skr"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2306.6265659907654!2d129.
+                    05994738550177!3d35.155060182770306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!
+                    1s0x3568eb6feb39fa0d%3A0x17502eaffb28a5b4!2z67aA7IKwSVTqtZDsnKHshLzthLA!5e0!3m2!1sko!
+                    2skr!4v1766028431458!5m2!1sko!2skr"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
