--- a/251219-css-basic2/ex-실습-5-6.html
+++ b/251219-css-basic2/ex-실습-5-6.html
@@ -20,21 +20,23 @@
         }
 
         /* 실습6 */
+        /* 요구사항-기본설정작업 */
         .product {
             width: 50%;            
             background-color: lightgray;
             /* 부가옵션 */
             height: 150px;
-            border: 10px solid gold;
+            border: 5px solid rgb(236, 214, 214);
             /* 실제 가로 크기를 테두리 여백등을 포함한 가로 크기로 계산하기 */
             box-sizing: border-box;
 
         }
-
         .container {
-            display: flex;
+            /* flex는 자식 요소들을 가로로(나란히) 배치함. */
+            display: flex; 
             /* 자식이 넘치면, 다음 줄로 넘기기 */
             flex-wrap: wrap;
+            /* 요소들이 붙어있는게 싫다면 갭을 설정 */
             /* gap: 10px; */
         }
         @media screen and (max-width: 600px) {
@@ -51,7 +53,8 @@
     <h2>실습5 화면 넓이를 500px 이하면, 다크모드 흉내내기</h2>
     <p>500px 이하가 되면 다크 모드로 변합니다.</p>
 
-    <h2>실습6 600px 이하이면, 상품이 하나씩 가득차고, 그외는 2줄씩 가득차게 나오게 구성</h2>
+    <h2>실습6 600px 이하이면, 상품이 하나씩 가득차고, 
+        <br>그 외는 2줄씩 가득차게 나오게 구성</h2>
     <div class="container">
         <div class="product">상품1</div>
         <div class="product">상품2</div>
