--- a/251219-css-basic2/ex-실습-7-8.html
+++ b/251219-css-basic2/ex-실습-7-8.html
@@ -8,33 +8,32 @@
     <style>
         /* 실습7 */
         .box {
-            width: 150px;
-            height: 150px;
-            background-color: lightgray;
-            border: 10px solid gold;
+            width: 150px; /*임의설정*/
+            height: 150px; /*임의설정*/
+            background-color: lightgray; /*임의설정*/
+            border: 10px solid gold; /*임의설정*/
             box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3);
-            /* 정가운데 위치 주기 */
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            /* 정가운데 위치 주기(정답은 이 한 줄) */
+            display: flex; /*임의설정*/
+            justify-content: center; /*임의설정*/
+            align-items: center; /*임의설정*/
         }
 
         /* 실습8 */
         .btn {
-            width: 200px;
-            height: 100px;
-            border: none;
-            border-radius: 12px;
-            background-color: blueviolet;
-            color: white;
-            font-weight: bold;
-            cursor: pointer;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
+            width: 200px; /*임의설정*/
+            height: 100px; /*임의설정*/
+            border: none; /*임의설정*/
+            border-radius: 12px; /*임의설정*/
+            background-color: rgb(238, 49, 175); /*임의설정*/
+            color: aqua; /*임의설정*/
+            font-weight: bold; /*임의설정*/
+            cursor: pointer; /*임의설정*/
+            display: flex; /*임의설정*/
+            justify-content: center; /*임의설정*/
+            align-items: center; /*임의설정*/
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-
+            /* 정답은 이 한 줄 */
             /* 기본 확 변경되기 */
             /* 옵션 서서히 변경되게  */
             transition: 0.3s;
@@ -42,7 +41,9 @@
 
         .btn:hover {
             box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.3);
-            background-color: aqua;
+            /* 마우스를 올렸을때, 안쪽그림자 설정(inset) */
+            background-color: aqua; /*임의설정*/
+            color: rgb(238, 49, 175); /*임의설정*/
         }
     </style>
 </head>
@@ -51,6 +52,7 @@
     <div class="box">
         실습7 확인
     </div>
+
     <div class="btn">
         실습8 확인
     </div>
