--- a/251219-css-basic2/test2-박스모델.html
+++ b/251219-css-basic2/test2-박스모델.html
@@ -5,22 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <style>
         .card {
             width: 300px;
-            /* 1. 박스 너비 */
+            /* 1. 박스 너비(콘텐츠너비) */
             background-color: #f0f0f0;
             /* 배경색 (패딩 영역까지 칠해짐) */
-
             padding: 20px;
             /* 2. 안쪽 여백: 글자가 테두리에 딱 붙지 않게 함 */
             border: 10px solid blue;
             /* 3. 테두리: 2px 두께의 파란 실선 */
             margin: 30px;
             /* 4. 바깥 여백: 다른 요소와 30px 떨어짐 */
+
             /* 실제 가로 크기는 300px 주었지만, 웹 브라우저에서 확인 해보니 360px 나온다?
             뭔가 이상하다. 그래서, 효과를 이용해서, 크기를 지정한 크기만큼만 
-            차지하게 변경하자 */
+            차지하게 변경하자 (콘텐츠너비300+여백,테두리60=360이 됨. 
+            ★박스전체사이즈에 여백과 테두리 너비까지 포함시키는 작업을 하면
+            (box-sizing: border-box;) → 이렇게 !
+            콘텐츠 너비가 자동으로 240으로 맞춰진다.*/
             box-sizing: border-box;
         }
     </style>
@@ -31,6 +35,7 @@
         안녕하세요! 박스 모델 테스트입니다.
         padding이 없으면 글자가 파란 선에 붙어서 답답해 보입니다.
     </div>
+
     <div class="card">
         두 번째 카드입니다. margin 덕분에 첫 번째 카드와 붙지 않습니다.
     </div>
