--- a/251219-css-basic2/test3-flex-배치하기(정렬하기).html
+++ b/251219-css-basic2/test3-flex-배치하기(정렬하기).html
@@ -8,34 +8,27 @@
     <style>
         .nav-container {
             background-color: #ddd;
-
             /* 1. 플렉스 선언: 자식들을 제어하겠다 */
             display: flex;
-            
-            /* 방향을 세로 방향으로 하고 싶은 경우 */
+            /* 방향을 세로 방향으로 하고 싶은 경우(안하면 기본 가로주축으로 설정됨) */
             /* flex-direction: column; */
-
             /* 2. 가로 정렬: 아이템 사이에 
-            균일한 간격을 줌 */
+                균일한 간격을 줌 */
             /* justify-content: space-around; */
             /* 왼쪽방향으로 정렬  */
             /* justify-content: left; */
             /* 오른쪽 방향으로 정렬 */
             /* justify-content: right ; */
+            /* 중앙으로 정렬 */
             justify-content: center;
-
              /* 3. 세로 정렬: 부모 높이의 중앙에 배치 */
             align-items: center;
-
             /* 위쪽으로 정렬 */
             /* align-items: start; */
-
             /* 아랫방향으로 정렬 */
             /* align-items: end; */
-
              height: 300px; /* 부모 높이가 있어야 세로 정렬이 티가 남 */
-            
-        }
+            }
 
         .nav-item {
             background-color: white;
@@ -46,7 +39,9 @@
 </head>
 
 <body>
+    <!-- 부모 컨테이너 -->
     <div class="nav-container" >
+        <!-- 자식들(3) 아이템 -->
         <div class="nav-item">메뉴 1</div>
         <div class="nav-item">메뉴 2</div>
         <div class="nav-item">메뉴 3</div>
