--- a/251222-css-basic3/1-가상클래스및가상요소확인.html
+++ b/251222-css-basic3/1-가상클래스및가상요소확인.html
@@ -30,7 +30,7 @@
         .my-input {
             padding: 10px;
             border: 2px solid gray;
-            /* 모서리르 직각이 아니라, 약간 둥그스럽게 깍는 효과 */
+            /* 모서리를 직각이 아니라, 약간 둥그스럽게 깎는 효과 */
             border-radius: 4px;
             /* 효과는 아랫방향으로 이동하는 효과 */
             margin-top: 20px;
@@ -69,7 +69,7 @@
             font-weight: bold;
             border: 2px solid gold;
         }
-        /* 1-5 목록 요소에서, 짝수번째 요소 선택하기.  */
+        /* 1-5 목록 요소에서, 세번째 요소 선택하기.  */
         li:nth-child(3) {
             background-color: violet;
             color: white;
@@ -113,8 +113,10 @@
     <button class="btn">마우스를 올려보세요</button>
     <input type="text" class="my-input" placeholder="가상클래스 옵션 확인중...">
     <ul>
-        <li>1. 첫번째 아이템 (First Chile)</li>
-        <li>2. 두번째 아이템 (짝수번째: even)</li>
+        <li>1. 첫번째 아이템 
+            <br>(First Chile)</li>
+        <li>2. 두번째 아이템 
+            <br>(짝수번째: even)</li>
         <li>3. 세번째 아이템 </li>
         <li>4. 네번째 아이템 </li>
         <li>5. 다섯번째 아이템 </li>
