--- a/251219-css-basic2/test4-2-반응형웹-미디어쿼리기본2.html
+++ b/251219-css-basic2/test4-2-반응형웹-미디어쿼리기본2.html
@@ -20,7 +20,7 @@
         @media screen and (max-width: 768px) {
             .container {
                 flex-direction: column; /* 모바일: 세로 배치로 변경 */
-                background-color: pink;
+                /* background-color: pink; */
             }
             .item {
                 background-color: skyblue; /* 색상도 바꿔봄 */
