--- a/251223-JS-basic2/1-함수 기본예시.html
+++ b/251223-JS-basic2/1-함수 기본예시.html
@@ -8,12 +8,12 @@
 <body>
     <h1>Console을 확인하세요</h1>
     <script>
-        // 1. 기본 함수
+        // 1-1. 기본 함수
         function cry() {
             console.log("엉엉ㅠㅠ");
         }
 
-        // 함수 호출 (부르지 않으면 실행되지 않습니다!)
+        // 1-2. 함수 호출 (부르지 않으면 실행되지 않습니다!)
         cry();
         cry();
 
@@ -24,8 +24,8 @@
             console.log("두 수의 합은: " + result);
         }
 
-        plus(10, 20); // 30 출력
-        plus(100, 50); // 150 출력
+        plus(10, 20); // 30 출력 (10+20)
+        plus(100, 50); // 150 출력 (100+50)
     </script>
 </body>
 </html>
