--- a/251230.test/index.html
+++ b/251230.test/index.html
@@ -29,4 +29,5 @@
                 <p id="main-content-display">상단 메뉴를 클릭하여 내용을 확인하세요.</p>
             </section></main>
         <footer><p>Copyright 2025</p></footer></div>
-    <script src="js/script.js"></script></body></html>
+    <script src="js/script.js"></script>
+</body></html>
